# horilla

./: .coveragerc  .dockerignore  .env.app.local  .env.db.local  .env.dist  .env.example  .gitignore  .jenkins-config.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  JENKINS_CHECKLIST.md  JENKINS_COMPLETION_REPORT.md  JENKINS_FILES_CREATED.md  JENKINS_PIPELINE_SUMMARY.md  JENKINS_QUICK_START.md  JENKINS_SETUP.md  JENKINS_VISUAL_GUIDE.md  Jenkinsfile  Jenkinsfile.deploy  Jenkinsfile.docker  Makefile  Pipfile  QUICK_START.md  README.md  README_JENKINS.md  SECURITY.md  SETUP_SECRETS.md  TestDB_Horilla.sqlite3  build-and-push-to-ecr.ps1  cleanup_test_data.py  create_admin_user.sh  create_company_user.py  create_staticfiles.sh  delete_companies.py  delete_users.py  deploy.md  (+33 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
accessibility/: accessibility.py  apps.py  cbv_decorators.py  decorators.py  filters.py  methods.py  middlewares.py  models.py  signals.py  tests.py  urls.py  views.py
asset/: __init__.py  admin.py  apps.py  dashboard_modern.py  filters.py  forms.py  models.py  resources.py  scheduler.py  sidebar.py  tests.py  urls.py  views.py
attendance/: __init__.py  admin.py  apps.py  dashboard_modern.py  filters.py  forms.py  middleware.py  models.py  scheduler.py  sidebar.py  signals.py  tests.py  urls.py  views.py
auth/: forgot-password.html  login.html  reset.html
backup/: __init__.py  apps.py  pgdump.py  scheduler.py  urls.py  views.py
base/: admin.py  announcement.py  apps.py  backends.py  context_processors.py  countries.py  dashboard_modern.py  decorators.py  ess_dashboard.py  filters.py  forms.py  horilla_company_manager.py  methods.py  middleware.py  moared_company_manager.py  models.py  request_and_approve.py  scheduler.py  shift_decorators.py  signals.py  tests.py  theme-personalization.py  thread_local_middleware.py  threading.py  translator.py  urls.py  views copy.py  views.py  widgets.py  work_type_decorators.py
biometric/: __init__.py  admin.py  anviz.py  apps.py  context_processors.py  cosec.py  dahua.py  etimeoffice.py  filters.py  forms.py  models.py  settings.py  sidebar.py  urls.py  views.py
chatbot/: admin.py  models.py  piplines.py  urls.py  views.py
deploy/: entrypoint.sh  gunicorn.conf.py
deployment/: .env.dist  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  init-db.sh
(+3255 files in other folders)
