[metadata]
name = horilla
version = 1.0.0
description = Free and Open Source HRMS (Human Resource Management System)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/horilla-opensource/horilla
author = Horilla Contributors
author_email = info@horilla.example.com
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Framework :: Django :: 4.2
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11

[options.packages.find]
where = .
exclude =
    tests
    docs
    media
    static
    staticfiles
    node_modules

[bdist_wheel]
universal = False

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    docs,
    .venv,
    migrations,
    static,
    media,
    node_modules,
    .tox
ignore = E203, W503, W504
per-file-ignores =
    __init__.py: F401
    tests.py: F401, F405

[isort]
profile = black
line_length = 120
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = migrations, static, media, .venv, node_modules
skip_gitignore = true

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
check_untyped_defs = False
disallow_incomplete_defs = False
exclude =
    migrations,
    static,
    media,
    node_modules,
    .venv

plugins = mypy_django_plugin.main

[mypy.plugins.django]
django_settings_module = horilla.settings

[tool:pytest]
DJANGO_SETTINGS_MODULE = horilla.settings
python_files = tests.py test_*.py
testpaths = .
addopts = --reuse-db --nomigrations

[coverage:run]
source = .
omit =
    */migrations/*
    */static/*
    */media/*
    */.venv/*
    manage.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[bandit]
exclude_dirs = migrations,static,media,node_modules,.venv
skips = B101

[pylint]
max-line-length = 120
ignore = migrations
disable =
    missing-docstring,
    duplicate-code,
    fixme,
    too-few-public-methods,
    attribute-defined-outside-init
